<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:id="@+id/llMain"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edit_Weight"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Weight"
        android:inputType="number"
        android:textAlignment="center"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/edit_HeightFT"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Height_ft"
        android:inputType="number"
        android:textAlignment="center"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/edit_HeightIN"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Height_in"
        android:inputType="number"
        android:textAlignment="center"
        tools:ignore="TextSizeCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_Cal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:text="@string/BMICal"
        tools:ignore="TextSizeCheck" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_Result"
        android:text="@string/Final_Result"
        android:layout_marginTop="14dp"
        android:textSize="21sp"
        android:textStyle="bold"/>

</LinearLayout>